Fix twitter width on mobile

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -67,7 +67,7 @@ main .rightbar {
   }
 }
 
-@media (min-width: 575px) and (max-width: 700px) {
+@media (min-width: 575px) {
   .flex-list-item.scale-prop {
     width: 45%;
   }
