--- a/src/styles/_twitter.scss
+++ b/src/styles/_twitter.scss
@@ -1,6 +1,5 @@
 .twitter {
-  width: 100%;
-  height: 300px;
+  height: 320px;
   background-color: black;
 }
 
@@ -29,7 +28,7 @@
 
 .twitter .tweets {
   width: 100%;
-  height: 200px;
+  height: 220px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -78,7 +77,7 @@
   width: 90%;
   margin-left: 5%;
   margin-right: 5%;
-  font-size: 1vw;
+  font-size: 1rem;
   text-overflow: ellipsis;
 }
 
@@ -86,7 +85,7 @@
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%;
-  max-height: 80px;
+  max-height: 100px;
 }
 
 .twitter .tweets .tweet .tweet-link {
